[package]
name = "collabo"
version = "0.1.0"
edition = "2021"
authors = ["Dhruv Dhamani <ddhamani@charlotte.edu>"]

[dependencies]
genetic_algorithms = "1.3.2"
rand_distr = { version = "0.4.3", features = ["serde"] }
statrs = { version = "0.16.0", features = ["nightly"] }

[dependencies.rand]
version = "0.8.5"
features = ["serde", "nightly", "small_rng"]

[target.'cfg(target_os = "linux")'.dependencies.rand]
version = "0.8.5"
features = ["simd_support", "serde", "nightly", "small_rng"]
