[package]
name = "collabo"
version = "0.1.0"
edition = "2021"
authors = ["Dhruv Dhamani <ddhamani@charlotte.edu>"]

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
genetic_algorithms = { git = "https://github.com/DhruvDh/rust_genetic_algorithms.git" }
itertools = "0.12.1"
num_cpus = "1.16.0"
rand_distr = { version = "0.4.3", features = ["serde"] }
statrs = { version = "0.16.0", features = ["nightly"] }

[dependencies.rand]
version = "0.8.5"
features = ["serde", "nightly", "small_rng"]
